# LiyaanPush

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/liyaan/liyaanpush/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/liyaan/liyaanpush/: LivePusher.java  MainActivity.kt
app/src/main/java/com/liyaan/liyaanpush/meida/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/java/com/liyaan/liyaanpush/permissiongranted/: PermissionFetchUI.kt  PermissionGrantedCallback.kt  PermissionList.kt  PermissionUtils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/liyaan/liyaanpush/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
